--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,20 @@ body {
 header {
     background: #f0c52e80;
     height: 300px;
-    width: 1160px;
+    width: 90%;
+    max-width: 1160px;
     margin: 31px auto auto auto;
 }
 
 .container {
-    width: 1040px  ;
+    width: 90%;
+    max-width: 1040px;
     margin: 0 auto;
     position: relative;
 }
 
 .logo {
-    margin-top: -21px;
+    margin-top: -17px;
 }
 
 .search {
@@ -36,7 +38,7 @@ header {
 }
 
 .nav-up {
-    margin-top: 36px;
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
 
@@ -222,7 +224,8 @@ h1 {
 
 .popular {
     height: 322px;
-    width: 1160px;
+    width: 90%;
+    max-width: 1160px;
     margin: auto;
     padding-bottom: 100px;
 }
@@ -269,7 +272,8 @@ h1 {
     position: relative;
     justify-content: space-between;
     margin: 0 auto;
-    width: 1160px;
+    width: 90%;
+    max-width: 1160px;
 }
 
 .ico-1, .ico-2, .ico-3, .ico-4 {
@@ -281,13 +285,38 @@ h1 {
     justify-content: center;
 }
 
-/*.ico-1, .ico-2, .ico-3 {
-    padding-right: 20px;
+
+.ico-1 a:hover img {
+    opacity: 0;
+}
+ 
+.ico-2 a:hover img {
+    opacity: 0;
+}
+  
+.ico-3 a:hover img {
+    opacity: 0;
 }
 
-.ico-2, .ico-3, .ico-4 {
-    padding-left: 20px;
-}*/
+.ico-4 a:hover img {
+    opacity: 0;
+}
+
+.ico-1 a:hover {
+    background: url(../img/logo-1h.jpg) no-repeat;
+}
+
+.ico-2 a:hover {
+    background: url(../img/logo-2h.jpg) no-repeat;
+}
+
+.ico-3 a:hover {
+    background: url(../img/logo-3h.jpg) no-repeat;
+}
+
+.ico-4 a:hover {
+    background: url(../img/logo-4h.jpg) no-repeat;
+}
 
 .del-menu {
     padding-right: 117px;
@@ -340,13 +369,15 @@ h3 {
 }
 
 .partners {
-    width: 1200px;
+    width: 90%;
+    max-width: 1200px;
     margin: auto;
 }
 
 .info {
     height: 655px;
-    width: 1200px;
+    width: 90%;
+    max-width: 1200px;
     margin: auto;
 }
 
@@ -373,14 +404,18 @@ h3 {
 
 .about-text1 {
     width: 460px;
-    padding: 60px 0 45px 0;
+    padding: 60px 0 35px 0;
     margin: 0;
     line-height: 30px;
 }
 
+.about-text1 p {
+    margin: 0;
+}
+
 .about-text2 {
     width: 460px;
-    padding-bottom: 85px;
+    padding-bottom: 67px;
     margin: 0;
     letter-spacing: -0.2px;
     line-height: 30px;
@@ -391,12 +426,125 @@ h3 {
     font-size: 16px;
 }
 
-.about-text3 ul {
-    list-style-image: url(../img/marker.png); 
-    margin-right: 26px;
-}
-
 .about-text3 li {
     padding-bottom: 26px;
-    padding-left: 26px;
+    list-style: none;
+}
+
+.about-text3 li::before {
+    content: url(../img/marker.png); 
+    padding-right: 26px;
+}
+
+.rect-4 {
+    width: 260px;
+    height: 8px;
+    background-color: #f0c52e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 54px;
+    margin-bottom: 73px;
+}
+
+.map-text {
+        width: 560px;
+        padding: 60px 0 45px 0;
+        margin: 0;
+        line-height: 30px;
+}
+
+.map {
+    padding-bottom: 26px;
+}
+
+footer {
+    height: 323px;
+    background-color: #464646;
+    font-family: 'Open Sans Light', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    color: #fff;
+}
+
+.footer-menu {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1160px;
+    padding-top: 65px;
+}
+
+.menu-item a {
+    color: #ffffffb3;
+}
+
+.menu-item {
+    display: flex;
+}
+
+.menu-item img {
+    margin-right: 12px;
+}
+
+.user-f, .compare-f {
+    margin-right: 40px;
+}
+
+.menu-2 {
+    font-family: 'Gilroy ExtraBold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 19px;
+}
+
+.menu-2 a {
+    color: #fff;
+}
+
+.menu-2 li {
+    display: flex;
+    padding: 0 10px;
+}
+
+.footer-menu-2 {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1160px;
+    padding-top: 40px;
+}
+
+.footer-menu-2 p {
+    margin: 0;
+}
+
+.rect-5 {
+    width: 80px;
+    height: 7px;
+    background-color: #ffc600;
+    
+}
+
+.copyright {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1160px;
+    padding-top: 70px;
+}
+
+.social img {
+    padding: 0 8px;
 }
