--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,42 @@ a {
     text-decoration: none;
 }
 
-.catalog {
+.navhidden {
+    height: 130px;
+    padding-top: 40px;
+    background-color: #f7e296;
+    margin: 0 -60px;
+    overflow: hidden;
+    display: none;
+    z-index: 1;
+}
 
-    padding: 0;
+.navhidden a {
+    font-family: 'Open Sans Light', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    text-transform: none;
+    letter-spacing: 0;
+    padding-bottom: 20px;
+}
+
+.nav-1 {
+    margin-left: 60px;
+}
+
+.nav-1, .nav-2, .nav-3 {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+
+}
+
+.catalogbut {
+    cursor: pointer;
+    
+}
+
+.navhidden.open {
+    display: flex;
 }
 
 .container_left {
@@ -109,8 +142,29 @@ ul {
     margin-left: 540px;
 }
 
-.slider {
+.mySlides {
+    display: none;
+}
+
+.h-pos {
+    position: relative;
+    z-index: 1;
+}
+
+.sli-img-3 {
+    display: flex;
+    margin: -47px 0 0 -29px;
+}
+
+.sli-text-3 {
+    width: 500px;
+    margin-top: -32px;
+    position: relative;
     height: 479px;
+}
+
+.slider {
+    /*height: 479px;*/
 }
 
 .slider1 {
@@ -141,6 +195,7 @@ h1 {
     padding-left: 40px;
     margin-top: -32px;
     position: relative;
+    height: 479px;
 }
 
 .descr {
@@ -169,6 +224,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 40px;
 }
 
 .pag {
@@ -185,13 +241,41 @@ h1 {
     
 }
 
+.dot {
+    cursor: pointer;
+}
+
+
+.hover, .dot:active {
+    cursor: pointer;
+    background: url(../img/slider-button.png) no-repeat center;
+}
+
 .num {
     font-size: 179px;
     color: #fff;
     font-family: 'Gilroy ExtraBold', sans-serif;
     position: absolute;
-    bottom: 75%;
+    bottom: 77%;
     left: 68%;
+}
+
+.num-2 {
+    font-size: 179px;
+    color: #fff;
+    font-family: 'Gilroy ExtraBold', sans-serif;
+    position: absolute;
+    bottom: 77%;
+    left: 63%;
+}
+
+.num-3 {
+    font-size: 179px;
+    color: #fff;
+    font-family: 'Gilroy ExtraBold', sans-serif;
+    position: absolute;
+    bottom: 77%;
+    left: 60%;
 }
 
 .ch {
@@ -213,7 +297,7 @@ h1 {
 .charact {
     position: absolute;
     width: 510px;
-    margin: 80px 0 0 0;
+    margin: 40px 0 0 0;
 }
 
 .ch__de {
@@ -248,12 +332,64 @@ h1 {
     justify-content: center;
 }
 
+.col-1:hover, .col-2:hover, .col-3:hover, .col-4:hover, .col-5:hover, .col-6:hover {
+    background: #f0c52e;
+}
+
+.pop-1:active .col-text-1 {
+    opacity: 30%;
+}
+
+.pop-2:active .col-text-2 {
+    opacity: 30%;
+}
+
+.pop-3:active .col-text-3 {
+    opacity: 30%;
+}
+
+.pop-4:active .col-text-4 {
+    opacity: 30%;
+}
+
+.pop-5:active .col-text-5 {
+    opacity: 30%;
+}
+
+.pop-6:active .col-text-6 {
+    opacity: 30%;
+}
+
+.pop-1:active img {
+    opacity: 30%;
+}
+
+.pop-2:active img {
+    opacity: 30%;
+}
+
+.pop-3:active img {
+    opacity: 30%;
+}
+
+.pop-4:active img {
+    opacity: 30%;
+}
+
+.pop-5:active img {
+    opacity: 30%;
+}
+
+.pop-6:active img {
+    opacity: 30%;
+}
+
 .icon {
     display: flex;
     justify-content: space-between;
 }
 
-.col-text {
+.col-text-1, .col-text-2, .col-text-3, .col-text-4, .col-text-5, .col-text-6 {
     width: 160px;
     height: 160px;
     font-family: 'Gilroy ExtraBold', sans-serif;
@@ -375,7 +511,7 @@ h3 {
 }
 
 .info {
-    height: 655px;
+    height: 700px;
     width: 90%;
     max-width: 1200px;
     margin: auto;
@@ -400,6 +536,171 @@ h3 {
 
 .contacts {
     padding: 20px;
+}
+
+.btn {
+    cursor: pointer;
+}
+
+#write-us {
+    position: fixed; 
+    display: none; 
+    width: 100%; 
+    height: 100%; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2; 
+}
+
+.text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    transform: translate(-50%,-50%);
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.08), 0px 5px 20px 0px rgba(0, 0, 0, 0.14);
+}
+
+
+.form-back {
+    height: 553px;
+    width: 960px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.close {
+    padding: 22px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.imgclose {
+    margin: 0;
+    padding: 0;
+    opacity: 60%;
+    cursor: pointer;
+}
+
+.title {
+    display: flex;
+    width: 760px;
+    margin: 0 auto; 
+    justify-content: space-between;
+}
+
+.form-text {
+    font-family: 'Gilroy ExtraBold', sans-serif;
+    font-size: 18px;
+    
+    display: flex;
+    flex-direction: column;
+}
+
+input:hover {
+    background-color: #eaeaea;
+}
+
+input.name:focus {
+    background-color: #fff;
+    border: #f7e296 solid 3px;
+    outline: none;
+    box-sizing: border-box;
+}
+
+input.name:invalid {
+    background-color: #f6dada;
+    border: none;
+}
+
+textarea:hover {
+    background-color: #eaeaea;
+}
+
+textarea:focus {
+    background-color: #fff;
+    border: #f7e296 solid 3px;
+    outline: none;
+    box-sizing: border-box;
+}
+
+input.name {
+    width: 360px;
+    height: 60px;
+    border: none;
+    background-color: #f2f2f2;
+    margin-top: 10px;
+    font-family: 'Open Sans Regular', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    text-indent: 20px;
+}
+
+.name::placeholder {
+    color: #46464666;
+}
+
+.imgclose:active {
+    opacity: 30%;
+}
+
+.imgclose:hover {
+    opacity: 100%;
+}
+
+.form-mess {
+    font-family: 'Gilroy ExtraBold', sans-serif;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    width: 760px;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.mess {
+    height: 136px;
+    border: none;
+    background-color: #f2f2f2;
+    padding-left: 20px;
+    margin-top: 10px;
+    font-family: 'Open Sans Regular', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+}
+
+.form-mess textarea {
+    resize: none;
+
+}
+
+.form-mess textarea::placeholder {
+    color: #46464666;
+}
+
+.form-button {
+    width: 760px;
+    margin: 0 auto;
+}
+
+.rect-6 {
+    width: 200px;
+    height: 8px;
+    background-color: #f0c52e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 54px;
+    margin-bottom: 73px;
+}
+
+.rect-1:hover, .rect-4:hover, .rect-6:hover {
+    height: 40px;
+}
+
+.button:active {
+    opacity: 30%;
 }
 
 .about-text1 {
