--- a/css/catalog.css
+++ b/css/catalog.css
@@ -10,12 +10,14 @@ body {
 header {
     background: #f7e296;
     height: 186px;
-    width: 1160px;
+    width: 90%;
+    max-width: 1160px;
     margin: 31px auto auto auto;
 }
 
 .container {
-    width: 1040px  ;
+    width: 90%;
+    max-width: 1040px;
     margin: 0 auto;
     position: relative;
 }
@@ -24,15 +26,81 @@ header {
     margin-top: -17px;
 }
 
+.pag li:hover, .logo:hover, .cat:hover, .user:hover, .compare:hover, .cart:hover, .del:hover, .garant:hover, .conts:hover, .m-1:hover, .m-2:hover, .m-3:hover, .m-4:hover, .m-5:hover, .m-6:hover, .logo-footer:hover, .del-2:hover, .garant-2:hover, .contacts-2:hover, .logo-html:hover {
+    opacity: 60%;
+}
+
+.logo:active, .cat:active, .user:active, .compare:active, .cart:active, .del:active, .garant:active, .conts:active, .m-1:active, .m-2:active, .m-3:active, .m-4:active, .m-5:active, .m-6:active, .logo-footer:active, .del-2:active, .garant-2:active, .contacts-2:active, .logo-html:hover {
+    opacity: 30%;
+}
+
 .search {
     padding: 0 14px 0 0;
-    color: #0000004d;
 }
 
 .out {
     padding-left: 20px;
-    color: #0000004d;
+	opacity: 30%;
 }
+
+
+
+
+.search {
+    padding: 0 14px 0 0;
+
+}
+
+.text-search {
+    background: none;
+    border: none;
+    background-image: url(../img/search_.png);
+    background-repeat: no-repeat; 
+    background-position: 4px;
+    outline: none;  
+    padding-left: 40px;  
+    height: 46px;  
+    font-family: 'Open Sans Light', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+}
+
+.btn-search {
+    background: none;
+    outline: none;
+    border: black solid 2px;
+    height: 49px;
+    width: 85px;
+    margin-left: -5px;
+    display: none;
+}
+
+.btn-search:hover {
+    background-color: black;
+    color: #fff;
+}
+
+.btn-search:focus {
+    background-color: black;
+    color: #ffffff4d;
+}
+
+.text-search::placeholder {
+    opacity: 30%;
+}
+
+
+.text-search:hover::placeholder {
+    opacity: 60%;
+}
+
+.text-search:focus::placeholder {
+    opacity: 100%;
+}
+
+.text-search:focus {
+    border-bottom: black solid 2px;
+}
+
 
 .navigation {
     display: flex;
@@ -62,7 +130,7 @@ header {
     font-family: 'Gilroy ExtraBold', sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    padding-top: 51px;
+    padding-top: 30px;
     font-size: 18px;
     display: flex;
     justify-content: space-between;
@@ -124,24 +192,39 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    width: 1160px;
+    width: 90%;
+    max-width: 1160px;
     padding-top: 65px;
 }
 
-.menu-item a {
-    color: #ffffffb3;
+.user-f a {
+    color: #fff;
+    opacity: 70%;
 }
+
+.user-f a:hover, .compare-f a:hover, .cart-f a:hover {
+    opacity: 100%;
+}
+
+.compare-f a {
+    color: #fff;
+    opacity: 70%;
+}
+
+.cart-f a {
+    color: #fff;
+    opacity: 70%;
+}
+
 
 .menu-item {
     display: flex;
+    width: 325px;
+    justify-content: space-between;
 }
 
 .menu-item img {
     margin-right: 12px;
-}
-
-.user-f, .compare-f {
-    margin-right: 40px;
 }
 
 .menu-2 {
@@ -169,7 +252,8 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    width: 1160px;
+    width: 90%;
+    max-width: 1160px;
     padding-top: 40px;
 }
 
@@ -180,8 +264,7 @@ footer {
 .rect-5 {
     width: 80px;
     height: 7px;
-    background-color: #ffc600;
-    
+    background-color: #ffc600; 
 }
 
 .copyright {
@@ -190,12 +273,22 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    width: 1160px;
+    width: 90%;
+    max-width: 1160px;
     padding-top: 70px;
 }
 
 .social img {
     padding: 0 8px;
+    opacity: 30%;
+}
+
+.social img:hover {
+    opacity: 100%;
+}
+
+.social img:active {
+    opacity: 10%;
 }
 
 .mono {
@@ -206,11 +299,23 @@ footer {
     font-family: 'Open Sans Light', 'Helvetica Neue', sans-serif;
     font-size: 14px;
     display: flex;
-    color: #0000004d;
 }
 
 .breadcrumbs a {
-    color: #0000004d;
+    color: black;
+	opacity: 30%;
+}
+
+.breadcrumbs a:hover {
+    opacity: 100%;
+}
+
+.breadcrumbs a:active {
+    opacity: 10%;
+}
+
+.breadcrumbs .active {
+	opacity: 30%;
 }
 
 .breadcrumbs li {
@@ -228,11 +333,9 @@ footer {
 }
 
 .filter {
-
-    width: 270px;
-
+    width: 330px;
     display: flex;
-
+    padding-left: 60px
 }
 
 h2 {
@@ -243,17 +346,41 @@ h2 {
 }
 
 .sort {
-
     display: flex;
+}
+
+.sor {
+	font-size: 14px;
+    opacity: 30%;
+    font-family: 'Open Sans Regular', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+}
+
+.activ, .sor:active {
+	opacity: 100%;
+}
+
+.sor:hover {
+	opacity: 60%;
 }
 
 .sorting {
     padding-left: 55px;
     display: flex;
+	cursor: pointer;
 }
 
 .sorting span {
     padding: 0 15px;
+}
+
+.rect {
+    width: 200px;
+    height: 8px;
+    background-color: #f0c52e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .rect-4 {
@@ -263,8 +390,28 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 54px;
-    margin-bottom: 73px;
+    margin-top: 65px;
+}
+
+.rect-4:hover, .rect:hover {
+    height: 40px;
+}
+
+.add-compare {
+    position: absolute;
+    bottom: 35%;
+    font-size: 13px;
+    color: black;
+    opacity: 50%;
+    z-index: 1;
+}
+
+.add-compare:hover {
+    opacity: 100%;
+}
+
+.add-compare:active {
+    opacity: 20%;
 }
 
 .button {
@@ -274,25 +421,16 @@ h2 {
     font-size: 18px;
 }
 
+.button:active {
+    opacity: 30%;
+}
+
 .catalog-cont {
-    /*display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    height: 1287px;
-    width: 90%;
-    max-width: 1040px;
-    margin: 0 auto;
-    overflow: hidden;*/
     padding: 1px;
 }
 
-.catalog-cont>*:first-child {
-    align-items: stretch;
-}
-
 .content-menu {
-    max-width: 1040px;
+    max-width: 1160px;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -304,23 +442,10 @@ h2 {
     display: flex;
 }
 
-.items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    width: 830px;
-}
-
-.items div {
-    padding: 20px 0 20px 40px;
-}
-
 .sort-menu {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
     width: 830px;
-    margin-left: 70px;
 }
 
 .sort-filter {
@@ -329,15 +454,29 @@ h2 {
 }
 
 .up-down {
-    width: 260px;
+    width: 230px;
     display: flex;
     justify-content: flex-end;
-    margin-right: -60px;
+
+}
+
+.up-down img {
+	margin: auto 10px;
+	opacity: 20%;
+}
+
+.up-down img:hover {
+	opacity: 40%;
+}
+
+.up-down img:active {
+	opacity: 100%;
 }
 
 .filter-menu {
-     display: flex;
+    display: flex;
     flex-direction: column;
+    background-color: #eeeeee;
 }
 
 .catalog-items {
@@ -352,9 +491,154 @@ h2 {
     padding: 60px;
 }
 
-.backg {
-    background-color: darkgray;
+.color-f, .bluetooth {
+    padding-top: 40px;
 }
+
+.backg {
+    background-color: #ebebeb;
+	width: 760px;
+	height: 70px;
+	padding: 20px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    margin-top: 50px;
+}
+
+.items span {
+	font-family: 'Gilroy ExtraBold', sans-serif;
+    font-size: 18px;
+	display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+.item-title, .item-title-1 {
+	width: 252px;
+}
+
+.item-title-price {
+	display: flex;
+	padding: 36px 0 8px 0;
+}
+
+.item-title-price p {
+	font-family: 'Open Sans Light', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+	margin: 0;
+}
+
+.item-1, .item-2, .item-3, .item-4 {
+    padding: 20px 0 20px 40px;
+	display: flex;
+    flex-direction: column;
+}
+
+
+.items div.backg {
+    margin: 20px 0 80px 0;
+	display: flex;
+    flex-direction: row;
+	padding: 0;
+	align-items: center;
+}
+
+.items span.btn-back, span.btn-go {
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+	font-family: 'Gilroy ExtraBold', sans-serif;
+    font-size: 16px;
+	text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
+.items li {
+	cursor: pointer;
+	font-family: 'Gilroy ExtraBold', sans-serif;
+    font-size: 16px;
+	text-transform: uppercase;
+    letter-spacing: 4px;
+	margin: auto 15px;
+}
+
+.page-num, .active {
+	opacity: 100%;
+}
+
+.page-num {
+	opacity: 30%;
+}
+
+.items span.btn-back:hover, span.btn-go:hover {
+	background-color: #00000014;
+}
+
+.items span.btn-back:active, span.btn-go:active {
+	color: #0000004d;
+}
+
+.hidcart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: none;
+    position: absolute;
+    left:0;
+    bottom:0;
+    right:0;
+    top:0;
+}
+
+.btncart {
+    z-index: 1;
+}
+
+.btn {
+    cursor: pointer;
+ 
+    height: 40px;
+    align-items: center;
+    display: flex;
+}
+
+.rect-over {
+    height: 380px;
+    width: 360px;
+    opacity: 70%;
+    background-color: #eeeeee;
+    position: absolute;
+
+}
+
+.itemttl:hover .hidcart {
+    display: flex;
+}
+
+.itemttl {
+    position: relative;
+}
+
+.backg ul, li {
+	display: flex;
+}
+
+
+.btn-back, .btn-go {
+	width: 126px;
+	height: 70px;
+	justify-content: space-around;
+}
+
+
 
 .sub-filter span {
     font-family: 'Gilroy ExtraBold', sans-serif;
@@ -375,7 +659,7 @@ h2 {
     margin: 0 -60px;
     overflow: hidden;
     display: none;
-    z-index: 1;
+    z-index: 2;
 }
 
 .navhidden a {
@@ -405,3 +689,115 @@ h2 {
 .navhidden.open {
     display: flex;
 }
+
+.box {
+    display: flex;
+    flex-direction: column;
+}
+
+.contain {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.box label {
+    width: 27px;
+    height: 23px;
+    display: block;
+    position: relative;
+    font-family: 'Open Sans Light', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+}
+
+input[type="checkbox"] + span {
+    position: absolute; 
+    left: 0; 
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background: url(../img/checkbox-off.png) no-repeat; 
+    cursor: pointer; 
+   }
+
+   input[type="checkbox"]:checked + span  	{
+    background: url(../img/checkbox-on.png) no-repeat; 
+   }
+
+.blue label {
+    width: 25px;
+    height: 25px;
+    display: block;
+    position: relative;
+    font-family: 'Open Sans Light', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+}
+
+input[type="radio"] + span {
+    position: absolute; 
+    left: 0; 
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background: url(../img/radio-off.png) no-repeat; 
+    cursor: pointer; 
+   }
+
+   input[type="radio"]:checked + span  	{
+    background: url(../img/radio-on.png) no-repeat; 
+   }
+
+
+   body{
+    background: #333;
+  }
+  .slider{
+    width:80%;
+    height:5px;
+    background:#555;
+    position:relative;
+    margin-bottom:50px;
+    margin-left:20px;
+  }
+  .slider .bar{
+    position:absolute;
+    left:50px;
+    width:300px;
+    background:yellow;
+    height:100%;
+  }
+  .slider .bar .lp span{
+      position:relative;
+      left:-30px;
+  }
+  .slider .bar .rp span{
+      position:relative;
+      left:10px;
+  }
+  .slider .bar .lp,.slider .bar .rp{
+    cursor:pointer;
+    background:#555;
+    width:16px;
+    height:16px;
+    border:3px solid yellow;
+    border-radius:100%;
+    position:absolute;
+    line-height:400%;
+    color:white;
+    user-select:none;
+  }
+  .slider .bar .lp{
+    left:0px;
+    top:-8px;
+  }
+  .slider .bar .rp{
+    left:100%;
+    top:-8px;
+  }
