--- a/css/catalog.css
+++ b/css/catalog.css
@@ -519,11 +519,7 @@ h2 {
 }
 
 .items span {
-	font-family: 'Gilroy ExtraBold', sans-serif;
-    font-size: 18px;
-	display: flex;
-    align-items: baseline;
-    justify-content: space-between;
+
 }
 
 .item-title, .item-title-1 {
@@ -532,10 +528,17 @@ h2 {
 
 .item-title-price {
 	display: flex;
-	padding: 36px 0 8px 0;
+    padding: 36px 0 8px 0;
+    font-family: 'Gilroy ExtraBold', sans-serif;
+    font-size: 18px;
+	display: flex;
+    align-items: baseline;
+    justify-content: space-between;
 }
 
-.item-title-price p {
+
+
+.price-1 {
 	font-family: 'Open Sans Light', 'Helvetica Neue', sans-serif;
     font-size: 14px;
 	margin: 0;
@@ -547,6 +550,13 @@ h2 {
     flex-direction: column;
 }
 
+.btn-back, .btn-go {
+    font-family: 'Gilroy ExtraBold', sans-serif;
+    font-size: 18px;
+	display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
 
 .items div.backg {
     margin: 20px 0 80px 0;
